--- a/app.json
+++ b/app.json
@@ -1,8 +1,34 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/map/map",
     "pages/logs/logs"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
+        "tabBar": {
+          "color": "#dddddd",
+          "selectedColor": "#3cc51f",
+          "borderStyle": "black",
+          "backgroundColor": "#ffffff",
+          "list": [
+            {
+              "pagePath": "pages/index/index",
+              "iconPath": "images/wechat.png",
+              "selectedIconPath": "images/wechatHL.png",
+              "text": "索引"
+            },
+            {
+              "pagePath": "pages/map/map",
+              "iconPath": "images/map.png",
+              "selectedIconPath": "images/map.png",
+              "text": "地图"
+            }
+          ]
+        },
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
